force-app/main/default/objects/Book_Issue__c/fields/Books__c.field-meta.xml
<CustomField>
    <fullName>Books__c</fullName>
    <label>Books</label>
    <referenceTo>Books__c</referenceTo>
    <relationshipLabel>Book Issue</relationshipLabel>
    <relationshipName>Book_Issue</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>