force-app/main/default/objects/Book_Issue__c/fields/Days_Issued__c.field-meta.xml
<CustomField>
    <fullName>Days_Issued__c</fullName>
    <formula>Return_Date__c -  Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Issued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>