force-app/main/default/objects/Book_Issue__c/fields/Fine_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount__c</fullName>
    <formula>IF( No_Of_OverDue_Days__c == 0 , 0, 100* No_Of_OverDue_Days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fine Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>