force-app/main/default/objects/Book_Issue__c/fields/Is_Late__c.field-meta.xml
<CustomField>
    <fullName>Is_Late__c</fullName>
    <formula>IF( Return_Date__c &lt; TODAY() , &quot;LATE&quot;, &quot;NOT LATE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Text</type>
</CustomField>