force-app/main/default/objects/Book_Issue__c/fields/No_Of_OverDue_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_OverDue_Days__c</fullName>
    <formula>IF( TODAY() &gt;  Return_Date__c , TODAY() - Return_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.Of.OverDue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>