force-app/main/default/objects/Book_Issue__c/validationRules/Is_Eligible_for_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Eligible_for_Book</fullName>
    <active>false</active>
    <errorConditionFormula>Contact__r.Total_Approved__c &gt;= 3</errorConditionFormula>
    <errorMessage>You Are Not Eligible For Issuing a Book</errorMessage>
</ValidationRule>