force-app/main/default/objects/Book_Issue__c/validationRules/Issue_date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Issue_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Issue_Date__c</errorDisplayField>
    <errorMessage>Enter Correct Date</errorMessage>
</ValidationRule>