force-app/main/default/objects/Book_Issue__c/validationRules/Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Return_Date__c &lt;  Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Return_Date__c</errorDisplayField>
    <errorMessage>Enter Correct Return Date</errorMessage>
</ValidationRule>